added rubeus link to projects.

--- a/index.html
+++ b/index.html
@@ -71,11 +71,15 @@
 								</p>
 								<section class="is-gallery">
 									<div class="row half">
-										<div class="4u">
+										<div class="6u">
 											<a href="http://rexify.herokuapp.com" class="image image-full" target="_blank"><img src="images/rexify.png" alt="Spiceworks SpiceWars Summer 2014 project"></a>
 											<h3>Rexify (Spiceworks Summer 2014 SpiceWars)</h3>
 										</div>
-									</div>									
+										<div class="6u">
+											<a href="http://thawing-falls-1724.herokuapp.com/" class="image image-full" target="_blank"><img src="images/rubeus.png" alt="CMU Intro to Software Engineering Fall 2013 project"></a>
+											<h3>Rubeus</h3>
+										</div>
+									</div>																		
 								</section>
 							</article>
 
