--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 						<a href="#me" class="fa fa-home active"><span>Home</span></a>
 						<a href="#resume" class="fa fa-file-text"><span>Resume</span></a>
 						<a href="#projects" class="fa fa-folder"><span>Projects</span></a>
-						<a href="#magic" class="fa fa-magic"><span>MTG</span></a>
 						<a href="https://www.linkedin.com/pub/brandon-gannicott/4a/494/bba" class="fa fa-linkedin"><span>Linkedin</span></a>
 						<a href="https://github.com/gannicottb" class="fa fa-github"><span>GitHub</span></a>
 						<a href="http://twitter.com/BGannicott" class="fa fa-twitter"><span>Twitter</span></a>
@@ -48,7 +47,7 @@
 							<article id="me" class="panel">
 								<header>
 									<h1>Brandon Gannicott</h1>
-									<span class="byline">Mobile/Web Software Developer</span>									
+									<span class="byline">Web Software Developer</span>									
 								</header>
 
 								<a href="#resume" class="jumplink pic">
@@ -69,27 +68,25 @@
 								<p>
 									Here are some of the projects that I've worked on (that actually have permanent homes on the Web)
 								</p>
-								<section class="is-gallery">
-									<div class="row half">
+								<section>
+									<!-- <div class="row half"> -->
 										<div class="6u">
-											<a href="http://rexify.herokuapp.com" class="image image-full" target="_blank"><img src="images/rexify.png" alt="Spiceworks SpiceWars Summer 2014 project"></a>
 											<h3>Rexify (Spiceworks Summer 2014 SpiceWars)</h3>
+                      <a href="http://rexify.herokuapp.com">Spiceworks SpiceWars Summer 2014 project</a>
+                      <p>It makes SpiceRexes out of email addresses!</p>
 										</div>
 										<div class="6u">
-											<a href="http://thawing-falls-1724.herokuapp.com/" class="image image-full" target="_blank"><img src="images/rubeus.png" alt="CMU Intro to Software Engineering Fall 2013 project"></a>
 											<h3>Rubeus</h3>
+                      <a href="http://thawing-falls-1724.herokuapp.com/">CMU Intro to Software Engineering Fall 2013 project</a>
+                      <p>A buy/sell community website</p>
 										</div>
-									</div>																		
+                    <div class="6u">
+                      <h3>L5R-Cell</h3>
+                      <a href="https://gannicottb.github.io/l5r-cell/">https://gannicottb.github.io/l5r-cell/</a>
+                      <p>A Legend of the Five Rings client written in <a href="https://www.celljs.org/">Cell</a>! (WIP)</p>
+                    </div>
+									<!-- </div>																		 -->
 								</section>
-							</article>
-
-							<article id="magic" class="panel">
-								<header>
-									<h1>I play Magic: The Gathering.</h1>
-									
-								</header>
-								<p>I started playing in 2004 with a WU Fifth Dawn theme deck, took a break between Kamigawa and Zendikar, and then discovered Commander sometime in 2010. I pretty much just want to play Commander all the time.</p>
-								<a href="http://www.mtgvault.com/cybersage/"><span>Some of my decks are on MTGVault</span></a>
 							</article>
 		
 				<!-- Footer -->
