change projects list

--- a/public/index.html
+++ b/public/index.html
@@ -80,12 +80,12 @@
                       <a href="http://thawing-falls-1724.herokuapp.com/">CMU Intro to Software Engineering Fall 2013 project</a>
                       <p>A buy/sell community website</p>
 										</div>
-                    <div class="6u">
-                      <h3>L5R-Cell</h3>
-                      <a href="https://gannicottb.github.io/l5r-cell/">https://gannicottb.github.io/l5r-cell/</a>
-                      <p>A Legend of the Five Rings client written in <a href="https://www.celljs.org/">Cell</a>! (WIP)</p>
-                    </div>
-									<!-- </div>																		 -->
+										<div class="6u">
+											<h3>Advent of Code (elm)</h3>
+											<a href="https://github.com/gannicottb/advent-of-code-elm">Github</a>
+											<p>A few Advent of Code solutions written in Elm.</p>
+										</div>
+									
 								</section>
 							</article>
 		
